# modern_cmake

./: CMakeLists.txt  README.md  conanfile.py
lockfree_ringbuffer/: CMakeLists.txt
lockfree_ringbuffer/include/lockfree_ringbuffer/: i_lockfree_ringbuffer.h  lockfree_ringbuffer.h  lockfree_ringbuffer.ipp  lockfree_swsr_ringbuffer.h
lockfree_ringbuffer/src/: lockfree_ringbuffer.cpp
lockfree_ringbuffer/tests/: CMakeLists.txt  lockfree_ringbuffer_test.cpp  lockfree_swsr_ringbuffer_test.cpp
